fixed the alignment of the input field

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -31,19 +31,14 @@ p{
     width: 100px;
 }
 
-
-.History_container {
+.History_container{
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    max-width: 500px;
-    margin-left: 50vh;
-    padding-right: 60px;
-    padding-bottom: 60px;
-    margin: 0 auto;
-    margin-top: -45px; /* Adjust to move it upwards */
+    align-items: center;    
+    padding-right: 17vh;
+    gap: 15px;
 }
-
-input {
+input{
+    width: 500px;
     height: 40px;
 }
